added simple usertoken verification in game_controller
